--- a/WEB/CSS/cart.css
+++ b/WEB/CSS/cart.css
@@ -1,6 +1,6 @@
-html{
+/* html{
     height: 100%;
-}
+} */
 
 .cart-title{
     font-size: 4rem;
@@ -42,3 +42,9 @@ html{
     background-color: var(--pink);
 }
 
+.nada{
+    font-size: 1.7rem;
+    margin-top: 8rem;
+    margin-bottom: 10rem;
+    text-align: center;
+}
